# fnpqnn_gateway_MVP

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  SCHOOL_TOOL_GOVERNANCE.md  SECURITY.md  pyproject.toml
.fnpqnn_gateway/token_governor/: policy.default.json  policy.operator.json
.github/workflows/: tests.yml
Short term memory Gateway/: AGENTS.md  dorsal_pocket.md
docs/: ACTIVATION_HANDOFF.md  CLI_REFERENCE.md  CODEPROJECT_AI_SERVER.md  CODEPROJECT_YOLO_TRAINING.md  E2B_CLOUD_KIT_LVFM_RAG.md  HOOKS.md  INTEGRATION_WITH_FNP_QNN.md  OBSIDIAN_RAG_BRIDGE.md  QLC_WIRING_PASS_2.md  SUPPORT.md  TOKEN_GOVERNOR.md  TOKEN_GOVERNOR_IMPLEMENTATION_REPORT.md  observability_gateway_bootstrap.md
fnpqnn_gateway_mvp/: __init__.py  __main__.py  activation.py  bootstrap.py  capability_bridge.py  cli.py  cloud_kit.py  codeproject_client.py  codeproject_mesh.py  context_compressor.py  deepsearch_skill.py  handoff_envelope.py  hooks.py  model_provider.py  natural_auth.py  neutrosophic_gate.py  obsidian_bridge.py  qlc_env.py  qlc_submit.py  runner.py  skill_creator.py  support.py  telemetry.py  token_budget.py  token_estimator.py  token_governor.py  tunnel.py  web_auth_login.py
output/research/: codeproject_yolo_training_research_2026-06-23.md
tests/: test_gateway_cli.py
tests/fixtures/qlc_contract/: qlc_workflow_document.json  qlc_workflow_forbidden_raw.json  qlc_workflow_image.json  qlc_workflow_video.json
